--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "@types/react-dom": "18.0.11",
     "classnames": "^2.3.2",
     "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
+    "eslint-config-next": "^13.4.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
-    "next": "13.2.4",
+    "next": "^13.4.0",
     "next-auth": "^4.22.0",
     "phosphor-react": "^1.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-responsive-carousel": "^3.2.23",
+    "sharp": "^0.32.1",
     "typescript": "5.0.3",
     "usehooks-ts": "^2.9.1"
   },
