--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-NEXTAUTH_URL=https://thaihealthcare_gw.anamai.moph.go.th/portal3/api/auth
+NEXTAUTH_URL=https://thaihealthcare_gw.anamai.moph.go.th/adminportal/api/auth
